--- a/src/app/store/nav/nav.component.html
+++ b/src/app/store/nav/nav.component.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
         </li>
+        <li class="nav-item ">
+             <app-cart-summary></app-cart-summary>
+        </li>
       </ul>
     </div>
   </div>
