--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -6,13 +6,33 @@
   <div class="row">
 
     <div class="col-lg-3">
-
       <h1 class="my-4">Shop Name</h1>
       <div class="list-group">
-        <a href="#" class="list-group-item">Category 1</a>
-        <a href="#" class="list-group-item">Category 2</a>
-        <a href="#" class="list-group-item">Category 3</a>
+        <a href="#" class="list-group-item"[class.active]="category ==selectedCategory" (click)="changeCategory(category)">Home </a>
+         <a href="#" class="list-group-item"[class.active]="category ==selectedCategory" *ngFor="let category of categories" (click)="changeCategory(category)">{{category}} </a>
+      </div><br>
+      <div class="btn-group w-100">
+          <button type="button" class="btn btn-success  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            buscar por scale
+          </button>
+          <div class="dropdown-menu w-100">
+              <a href="#" class="list-group-item p-2 m-auto w-100" [class.active]="scale ==selectedScale"(click)="changeScale(scale)" >All</a>
+
+              <a href="#" class="list-group-item p-2 m-auto w-100" [class.active]="scale ==selectedScale" *ngFor="let scale of scales" (click)="changeScale(scale)" >{{scale}} </a>
+
+          </div>
       </div>
+      <br><br>
+      <div class="btn-group w-100">
+          <button type="button" class="btn btn-sm btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Search by vendor
+          </button>
+          <div class="dropdown-menu w-100">
+              <a href="#" class="list-group-item p-1 m-auto w-100" [class.active]="vendor ==selectedVendor" (click)="changeVendor(vendor)">All</a>
+
+              <a href="#" class="list-group-item p-1 m-auto w-100" [class.active]="vendor ==selectedVendor" *ngFor="let vendor of vendors" (click)="changeVendor(vendor)">{{vendor}} </a>
+          </div>
+        </div>
 
     </div>
     <!-- /.col-lg-3 -->
@@ -45,107 +65,61 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-
+      <div class="row">
+        <div class="col-lg-12 col-md-12 my-2">
+          <h6 class="p-2 mb-1 pl-5 bg-info text-white font-italic">
+            <p class="d-inline-block"> {{selectedCategory==null?'ALL':selectedCategory}} ></p>
+            <p class="d-inline-block"> {{selectedScale==null?'ALL':selectedScale}} > </p>
+            <p class="d-inline-block"> {{selectedVendor==null?'ALL':selectedVendor}}</p> 
+          </h6>
+        </div>
+      </div>
       <div class="row">
 
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4" *ngFor="let product of products">
+          
           <div class="card h-100">
             <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item One</a>
+                <a href="#">{{product.productName}}</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              <h5>{{product.MSRP|currency}}</h5>
+              <!--<p class="card-text">{{product.productDescription  | slice:0:50}}</p>-->
+              
+              <p class="card-text">{{product.productDescription  | slice:0:50}}</p>
             </div>
             <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Two</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Three</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Four</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Five</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Six</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              <button class="btn btn-warning" (click)="addProduct(product)">Agregar</button>
             </div>
           </div>
         </div>
 
       </div>
       <!-- /.row -->
+      <div class="row" >
+        <div class="ml-auto"> 
+            <nav aria-label="...">
+                <ul class="pagination pagination-lg">
+                  <li class="page-item" *ngFor="let page of PageNumbers" [class.active]="selectedPage ==page">
+                    <a class="page-link" href="#" (click)="changePage(page)">{{page}}</a>
+                  </li>
+                </ul>
+              </nav>
+        </div>
+      <div class="form-inline pull-xs-left">
+      <select name="" id="" class="form-control form-contro-sm"
+      (change)="changePageSize($event.target.value)">
+        <option value="12">12 per Page</option>
+        <option value="13">13 per Page</option>
+        <option value="14">14 per Page</option>
+        <option value="15">15 per Page</option>
+        <option value="16">16 per Page</option>
+      </select>
+    </div>
+
+      </div>
+      
 
     </div>
     <!-- /.col-lg-9 -->
