--- a/src/app/store/cart-summary/cart-summary.component.html
+++ b/src/app/store/cart-summary/cart-summary.component.html
@@ -8,9 +8,8 @@
       (empty)
     </span>
     <button class="btn btn-secondary btn-sm " 
-    [disabled]="cart.itemCount==0">
+    [disabled]="cart.itemCount==0" routerLink='/cart'>
     <i class="fas fa-cart-plus icon-cart text-white">
-
     </i>
     </button>
   </small>
