--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -82,7 +82,7 @@
             <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">{{product.productName}}</a>
+                <a>{{product.productName}}</a>
               </h4>
               <h5>{{product.MSRP|currency}}</h5>
               <!--<p class="card-text">{{product.productDescription  | slice:0:50}}</p>-->
