--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -74,15 +74,16 @@
           </h6>
         </div>
       </div>
-      <div class="row">
+      <div class="row" >
 
-        <div class="col-lg-4 col-md-6 mb-4" *ngFor="let product of products">
+        <div class="col-lg-4 col-md-6 mb-4" *ngFor="let product of products;index as productId">
           
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a>{{product.productName}}</a>
+                <a  [title]="product.productName + ' details'" [routerLink]="['/productDetail', product.productCode]">
+                  {{product.productName}}</a>
               </h4>
               <h5>{{product.MSRP|currency}}</h5>
               <!--<p class="card-text">{{product.productDescription  | slice:0:50}}</p>-->
